--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Este es un sitio web con github pages</h1>
-<p>Y fue creado con amor para el curso de git y github de platzi</p>
-<p><img src="https://c.tenor.com/aJ_qJ14d4B4AAAAd/sliding-cat-gato-con-lag.gif" /></p>
+<h1>Estoy aprendiendo todavia</h1>
+<p>Pasaba a decirte que eres muy especial para mi, que te amo y se que puedes lograr todo lo que te propongas, cuando aprenda mucho mas te dare mejores cosas ajajja <3</p>
+<p><img src="https://i.pinimg.com/736x/05/8b/fe/058bfe5757228de090b20b9228623a24--ying-yang-yin-and-yang.jpg" /></p>
